--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -19,9 +19,9 @@
         </div>
         <div class="isi">
           <div class="isi2">
-            <a href="dashboard"><h4 class="dashboard">Dashboard</h4></a><br />
-            <a href="pengelolaan"><h4>Pengelolaan</h4></a><br />
-            <a href="historyAdmin"><h4>History</h4></a><br />
+            <a href="/dashboard"><h4 class="dashboard">Dashboard</h4></a><br />
+            <a href="/pengelolaan"><h4>Pengelolaan</h4></a><br />
+            <a href="/historyAdmin"><h4>History</h4></a><br />
             <form id="logoutForm" action="/logout" method="POST">
               <button
                 type="submit"
