--- a/public/listDisetujui.css
+++ b/public/listDisetujui.css
@@ -171,6 +171,13 @@ form{
     text-align: center; 
 }
 
+h3{
+    font-size: 25px;
+    margin-top: 40px;
+    margin-left: 40px;
+    position: absolute;
+  }
+
 table{
     border-collapse: collapse;
     margin: auto;
