--- a/public/listDitolak.css
+++ b/public/listDitolak.css
@@ -26,7 +26,7 @@ body{
     width: 100%;
     
    
-   
+
 }
 
 .sidebar{
@@ -174,6 +174,13 @@ form{
     z-index: 3;
     text-align: center; 
 }
+
+h3{
+    font-size: 25px;
+    margin-top: 40px;
+    margin-left: 40px;
+    position: absolute;
+  }
 
 table{
     border-collapse: collapse;
