--- a/views/admin/historyAdmin.ejs
+++ b/views/admin/historyAdmin.ejs
@@ -21,7 +21,7 @@
       <div class="isi">
         <div class="isi2">
           <a href="dashboard"><h4>Dashboard</h4></a><br />
-          <a href="listPengajuan"><h4 >Pengelolaan</h4></a><br />
+          <a href="pengelolaan"><h4 >Pengelolaan</h4></a><br />
           <a href="historyAdmin"><h4 class="dashboard">History</h4></a><br />
           <form id="logoutForm" action="/logout" method="POST">
             <button
