--- a/views/admin/pengelolaan.ejs
+++ b/views/admin/pengelolaan.ejs
@@ -21,7 +21,7 @@
       <div class="isi">
         <div class="isi2">
           <a href="dashboard"><h4 >Dashboard</h4></a><br />
-          <a href="listPengajuan"><h4 class="dashboard">Pengelolaan</h4></a><br />
+          <a href="pengelolaan"><h4 class="dashboard">Pengelolaan</h4></a><br />
           <a href="historyAdmin"><h4>History</h4></a><br />
           <form id="logoutForm" action="/logout" method="POST">
             <button
